--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "build:mp-weixin": "uni build -p mp-weixin",
     "build:quickapp-webview": "uni build -p quickapp-webview",
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
-    "build:quickapp-webview-union": "uni build -p quickapp-webview-union"
+    "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
+    "prepare": "husky install",
+    "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx"
   },
   "lint-staged": {
     "*.{vue,js,ts}": "eslint --fix"
