--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3060320220917001",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3060320220917001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060320220917001",
+    "pinia": "^2.0.22",
     "vue": "^3.2.39"
   },
   "devDependencies": {
