--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "dlhtx.uniapp-snippet",
     "editorconfig.editorconfig",
     "dbaeumer.vscode-eslint",
-    "adam-bender.commit-message-editor"
+    "adam-bender.commit-message-editor",
+    "mrmlnc.vscode-scss"
   ]
 }
