--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "uni-preset-vue",
   "version": "0.0.0",
   "scripts": {
+    "dev": "uni -p mp-weixin",
     "dev:app": "uni -p app",
     "dev:app-android": "uni -p app-android",
     "dev:app-ios": "uni -p app-ios",
@@ -75,6 +76,7 @@
     "lint-staged": "^13.0.3",
     "postcss": ">=8.3.11 <9.0.0",
     "prettier": "^2.6.2",
+    "sass": "^1.55.0",
     "typescript": "^4.8.3",
     "vite": "2.9.14"
   }
