feat: 自动导入vue3的api

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,8 @@
 {
   "recommendations": [
-    "Vue.volar",
+    "misterj.vue-volar-extention-pack",
     "dlhtx.uniapp-snippet",
     "editorconfig.editorconfig",
-    "dbaeumer.vscode-eslint",
     "adam-bender.commit-message-editor",
     "mrmlnc.vscode-scss"
   ]
