--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "prettier": "^2.6.2",
     "sass": "^1.55.0",
     "typescript": "^4.8.3",
-    "vite": "2.9.14"
+    "unplugin-auto-import": "^0.11.2",
+    "vite": "2.9.14",
+    "vue-global-api": "^0.4.1"
   }
 }
