--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,10 @@
       "@/*": ["./src/*"]
     },
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.vue",
+    "auto-imports.d.ts"
+  ]
 }
