feat: path工作区配置

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "dlhtx.uniapp-snippet",
     "editorconfig.editorconfig",
     "adam-bender.commit-message-editor",
-    "mrmlnc.vscode-scss"
+    "mrmlnc.vscode-scss",
+    "christian-kohler.path-intellisense"
   ]
 }
