--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,7 +4,7 @@
     "dlhtx.uniapp-snippet",
     "editorconfig.editorconfig",
     "adam-bender.commit-message-editor",
-    "mrmlnc.vscode-scss",
+    "antfu.unocss",
     "christian-kohler.path-intellisense"
   ]
 }
